--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <button id="current-month" class="btn btn-outline btn-compact">Сегодня</button>
                 <button id="next-month" class="btn btn-outline btn-compact">→</button>
             </div>
-            <div id="month-range" class="nav-title">Октябрь 2024</div>
+            <div id="month-range" class="nav-title">Октябрь 2025</div>
             <div class="user-info">
                 <span id="current-user" style="margin-right: 10px; font-size: 0.9em;"></span>
-                <button id="edit-toggle" class="btn btn-primary btn-edit">Edit</button>
+                <button id="edit-toggle" class="btn btn-outline btn-compact" title="Ред.">✏️</button>
                 <button id="logout-btn" class="btn btn-outline btn-compact" title="Выйти">🚪</button>
             </div>
         </div>
@@ -184,3 +184,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
