--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </div>
             <div id="month-range" class="nav-title">Октябрь 2025</div>
             <div class="user-info">
+                <button id="theme-toggle" class="btn btn-outline btn-compact" title="Сменить тему">🌙</button>
                 <span id="current-user" style="margin-right: 10px; font-size: 0.9em;"></span>
                 <button id="edit-toggle" class="btn btn-outline btn-compact" title="Ред.">✏️</button>
                 <button id="logout-btn" class="btn btn-outline btn-compact" title="Выйти">🚪</button>
@@ -184,4 +185,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-
