--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div id="login-modal" class="modal" style="display: flex;">
     <div class="modal-content">
         <div class="modal-header">
-            <h3 class="modal-title">Вход в систему</h3>
+            <h3 class="modal-title">Вход</h3>
         </div>
         <form id="login-form">
             <div class="form-group">
@@ -176,3 +176,4 @@
 <!-- Основной скрипт -->
 <script src="app.js"></script>
 </body></html>
+
